[gd_scene load_steps=2 format=3 uid="uid://b4j3h2n1k5m6v"]

[ext_resource type="Script" uid="uid://bhxjphmlawfap" path="res://scripts/Main.gd" id="1_0x8kj"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x8kj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 48
text = "Twitter Bookmark to Markdown Converter"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DropArea" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/DropArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "ここにbookmark.jsonファイルをドロップしてください"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FilenameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "生成されたファイル名: bookmark_20241231.json"

[node name="FormContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ModelLabel" type="Label" parent="VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "AIモデル選択:"

[node name="ModelSelect" type="OptionButton" parent="VBoxContainer/FormContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 22

[node name="OembedLabel" type="Label" parent="VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "埋め込み形式:"

[node name="OembedSelect" type="OptionButton" parent="VBoxContainer/FormContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 22

[node name="ConvertButton" type="Button" parent="VBoxContainer/FormContainer"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 26
text = "変換を開始"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_font_sizes/font_size = 24
text = "ステータス: 待機中"

[node name="UserDirLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "出力先: "

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="OpenFolderButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(220, 48)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "📁 出力フォルダを開く"

[node name="SettingsButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(180, 48)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "⚙️ Ollama設定"
